--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "project-sample-server",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
@@ -12,7 +12,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "express": "4.18.2",
     "mysql": "^2.18.1"
   }
 }
